@@ -53,55 +53,26 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
-                    <argLine>
-                        -ea
-                        --enable-preview
-                        -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
-                    </argLine>
-                    <trimStackTrace>false</trimStackTrace>
-                    <!--TODO: remove this ignore once all tests pass
-                         For tests dependent on the external services, make the separate profile to run them
-                         within a specific environment-->
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <useFile>true</useFile>
-                    <disableXmlReport>false</disableXmlReport>
-                    <printSummary>true</printSummary>
-                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
-                    <!--<forkMode>once</forkMode>-->
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <runOrder>balanced</runOrder>
-                    <includes>
-                        <include>**/*Test.*</include>
-                        <include>**/*TestCase.*</include>
-                        <include>**/*Suite.*</include>
-                    </includes>
-                    <excludedGroups>PERFORMANCE</excludedGroups>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.1.0</version>
-                <configuration>
-                    <updatePomFile>true</updatePomFile>
-                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <archive>
+                        <manifest>
+                            <mainClass>oap.httpbenchmark.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+
                 </configuration>
                 <executions>
                     <execution>
-                        <id>flatten</id>
-                        <phase>process-resources</phase>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
                         <goals>
-                            <goal>flatten</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>flatten.clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>clean</goal>
+                            <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
